HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestInvalidProcedureShape/Expected.uv
//! Expected diagnostic metadata for the TestInvalidProcedureShape rejected-source specimen.

expectedDiagnostic("E-TST-0104", "diagnostics.TestAttributes")
expectedDiagnostic("E-TST-0104", "req.TestProcedureShape")
